use a media folder instead of the site root for css files

--- a/python/bfim/templates/bfim/index.html
+++ b/python/bfim/templates/bfim/index.html
@@ -6,9 +6,9 @@
 
 <body bgcolor="white">
 
-<link href="http://www.fincherhome.com/CalendarControl.css"
+<link href="{{ const.MEDIA_URL }}CalendarControl.css"
       rel="stylesheet" type="text/css">
-<script src="http://www.fincherhome.com/CalendarControl.js"
+<script src="{{ const.MEDIA_URL }}CalendarControl.js"
         language="javascript"></script>
 
 <center>
