--- a/python/bfim/templates/bfim/bfim.html
+++ b/python/bfim/templates/bfim/bfim.html
@@ -1,12 +1,27 @@
 <HTML>
-<HEAD><TITLE> 
+<HEAD>
+	<link rel="stylesheet" href="{{ const.MEDIA_URL }}bootstrap/css/bootstrap.css">
+        <link href="{{ const.MEDIA_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="{{ const.MEDIA_URL }}bootstrap/css/docs.css" rel="stylesheet">
+        <link href="{{ const.MEDIA_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+                <script src="{{ const.MEDIA_URL }}bootstrap/js/html5shiv.js"></script>
+        <![endif]-->
+
+<TITLE> 
     Brian Fincher Investment Method
-</TITLE></HEAD>
+</TITLE>
+</HEAD>
 
 <BODY BGCOLOR="white">
 
 <CENTER>
-<TABLE WIDTH=60% BORDER=1 CELLPADDING=10>
+<div class="row-fluid">
+<div class="span2"></div>
+<div class="span8">
+<TABLE class="table table-striped table-bordered table-hover" >
 <TR>
 <TH> Date </TH>
 <TH> Price </TH>
@@ -33,6 +48,9 @@
 {% endfor %}
 
 </TABLE>
+</div>
+<div class="span2"></div>
+</div>
 </CENTER>
 
 </BODY>
